--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <p class="choose">choose length between 15 to 50: </p>
             <input type="number" name="length" id="length" min="10" max="50" placeholder="length">
             <div id="sug">
-                <p id="suggestion" onclick="copy()"></p>
-                <p id="suggestionSecond" onclick="secondCopy()"></p>
+                <p id="suggestion"></p>
+                <p id="suggestionSecond"></p>
             </div>
         </section>
     </main>
