debugging link of github

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     <li class="social">Social Media:</li>
                     <div id="images">
                         <li>Instagram <a href="#" target="_self"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li>GitHub<a href="https://github.com/kotzaplot" target="_self"><i class="fa-brands fa-github"></i></a></li>
                         <li>LinkedIn<a href="#" target="_self"><i class="fa-brands fa-linkedin"></i></a></li>
-                        <li>GitHub<a href="https://github.com/kotzaplot" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                     </div>
                 </div>
             </ol>
